Fix API Gateway and infrastructure configuration